# planten

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.beads/: issues.jsonl
.github/workflows/: plan9-qemu.yml  rust.yml
docs/: architecture.md  compatibility-matrix.md  development.md  plan9-qemu.md  pseudofs-workflow.md
kernel/planten_kernel/: Cargo.toml
kernel/planten_kernel/.cargo/: config.toml
kernel/planten_kernel/src/: main.rs  vga_buffer.rs
libs/planten_9p/: Cargo.toml
libs/planten_9p/src/: lib.rs  messages.rs
libs/planten_9p/tests/: client_golden.rs  golden.rs  golden_frames.rs
libs/planten_fs_core/: Cargo.toml
libs/planten_fs_core/src/: lib.rs
libs/planten_fs_dev/: Cargo.toml
libs/planten_fs_dev/src/: lib.rs  server.rs
libs/planten_fs_dev/tests/: dev_golden_integration.rs
libs/planten_fs_net/: Cargo.toml
libs/planten_fs_net/src/: lib.rs  server.rs
libs/planten_fs_net/tests/: net_golden_integration.rs
libs/planten_fs_proc/: Cargo.toml
libs/planten_fs_proc/src/: fs.rs  lib.rs  server.rs
libs/planten_fs_proc/tests/: integration.rs  proc_golden_integration.rs
libs/planten_fs_ramfs/: Cargo.toml
libs/planten_fs_ramfs/src/: lib.rs  (+1 more)
libs/planten_fs_srv/: Cargo.toml
libs/planten_ns/: Cargo.toml
tests/proc_client/: Cargo.toml
tools/: check_cargo_bin.sh
tools/capture_devfs/: Cargo.toml
tools/capture_golden/: Cargo.toml
tools/capture_netfs/: Cargo.toml
tools/capture_procfs/: Cargo.toml
tools/capture_srvfs/: Cargo.toml
tools/plan9-qemu/: apply-ns.sh  ci-runner.sh  replay-ns.sh  run.sh  setup.sh
tools/plan9_qemu_client/: Cargo.toml
userspace/planten_coreutils/: Cargo.toml
userspace/planten_coreutils/tests/: bind.rs  mount.rs  persistence.rs
(+13 files in other folders)
