[workspace]
members = [
    "kernel/planten_kernel",
    "libs/planten_9p", "libs/planten_fs_core", "libs/planten_fs_ramfs", "libs/planten_fs_proc", "libs/planten_ns", "userspace/planten_coreutils",
    "tools/capture_golden", "tools/capture_procfs", "tools/plan9_qemu_client", "tests/proc_client",
]

[package]
name = "planten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
