[package]
name = "planten_coreutils"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["mount", "sched"] }
planten_9p = { version = "0.1.0", path = "../../libs/planten_9p" }
planten_ns = { version = "0.1.0", path = "../../libs/planten_ns" }
serde_json = "1.0.145"
tempfile = "3.23.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3"
